<resources>

    <string name="app_name">Capture</string>

    <string name="menu_main_about">About</string>
    <string name="menu_main_disconect">Disconect</string>
    <string name="menu_main_login">Log in</string>
    <string name="menu_main_registr">Registr</string>
    <string name="menu_main_profile">Profile</string>
    <string name="menu_profile_exit">EXIT</string>

    <string name="title_registration">Registration</string>
    <string name="title_authorization">Authorization</string>
    <string name="title_create_scen">Create scen</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About</string>

    <string name="socket_status_сonnection">Сonnection...</string>
    <string name="socket_status_noсonnect">No connect</string>
    <string name="socket_status_сonnect">Connection is established</string>
    <string name="socket_status_undefined">Undefined</string>

    <string name="btn_socet_connect">Connect</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_map_go">Map ></string>

    <string name="ed_hint_email">Email</string>
    <string name="ed_hint_nickname">Nickname</string>
    <string name="ed_hint_pass">Password</string>
    <string name="ed_hint_pass2">Repeat password</string>

    <string name="ed_invalid">Invalid</string>

    <string name="dialog_title_error">Error!</string>
    <string name="dialog_title_attention">Attention!</string>
    <string name="dialog_email_exists">A user with this e-mail is already registered</string>
    <string name="dialog_login_error">Pair email and password do not match</string>
    <string name="dialog_nickname_is_not_available">Nickname is not available</string>
    <string name="dialog_login_or_register">You must log in or register</string>
    <string name="dialog_btn_login">Log in</string>
    <string name="dialog_btn_register">Register</string>
    <string name="dialog_btn_cancel">Cancel</string>

    <string name="version_">Version:</string>

</resources>
