<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_authorization"
        android:orderInCategory="100"
        android:title="@string/menu_main_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_registration"
        android:orderInCategory="100"
        android:title="@string/menu_main_registr"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_main_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disconect"
        android:orderInCategory="100"
        android:title="@string/menu_main_disconect"
        app:showAsAction="never" />

</menu>
