<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/activityRegistration_EditText_email"
        android:hint="@string/ed_hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:lines="1"
        android:maxLength="32"/>
    <EditText
        android:id="@+id/activityRegistration_EditText_nick"
        android:layout_marginTop="4dp"
        android:hint="@string/ed_hint_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLength="16"/>
    <EditText
        android:id="@+id/activityRegistration_EditText_pass"
        android:layout_marginTop="4dp"
        android:hint="@string/ed_hint_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="16"/>
    <EditText
        android:id="@+id/activityRegistration_EditText_pass2"
        android:layout_marginTop="4dp"
        android:hint="@string/ed_hint_pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="16"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/activityRegistration_Button_ok"
        android:text="@string/btn_ok"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>