<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/activityAuthorization_EditText_email"
        android:hint="@string/ed_hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:lines="1"
        android:maxLength="32"/>

    <EditText
        android:id="@+id/activityAuthorization_EditText_pass"
        android:layout_marginTop="4dp"
        android:hint="@string/ed_hint_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="16"/>

    <Button
        android:text="@string/btn_ok"
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>